--- a/html/recovering-histories/botswana/liv_022003_HTML.html
+++ b/html/recovering-histories/botswana/liv_022003_HTML.html
@@ -86,7 +86,7 @@ power.</p>
 <span class="caps right right4">Graham Bower,</span><br/>
 <span class="right right1">Imperial Secretary.</span></p><br/>
 <p><span class="leftmargin">Government House, Cape Town,</span><br/>
-<span class="left5">23nd March, 1885.</span></p>
+<span class="left5">23<sup>rd</sup> March, 1885.</span></p>
 
 </section>
 
