--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -349,7 +349,7 @@ hear it.</p>
 <p><em>Sir C. Warren</em>.—But we were on an important point just now, namely, that the
 natives were unable to keep the road open when Nicholas Gey chose to stop it.</p>
 <p><em>Sebeli</em>.—The stem-buck gets a chance of living somehow.</p>
-<p><em>Karie</em>.— think it would be a good plan for us to meet together ard talk things over.
+<p><em>Karie</em>.—I think it would be a good plan for us to meet together ard talk things over.
 Kosi Lentswe has put things in a new light to me. We have all along been going towards
 protection, but if there is to be a paying of taxes, then it is another thing.</p>
 
@@ -1237,7 +1237,7 @@ while there is still game in it.</p>
     <div class="item">(Signed)</div>
   </div>
   <div class="column" n="2">
-    <div class="item">F<span class="small">RANK</span>&nbsp;W.&nbsp;W<span class="small">ALKER</span>.</div>
+    <div class="item">F<span class="small">REDK</span>&nbsp;W.&nbsp;W<span class="small">ALKER</span>.</div>
     <div class="item">G<span class="small">EORGE</span>&nbsp;B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</div>
   </div>
 </div>
