--- a/html/materials/victorian_folklore.html
+++ b/html/materials/victorian_folklore.html
@@ -135,7 +135,7 @@
 						
 						<p>Each student read one folktale and devised a short plot summary of important events and characters and 3-5 keywords underscoring the tale&rsquo;s major concepts, themes, or Indigenous terms. In addition, some students contributed extra materials such as keyword definitions and long plot summaries. The “bonus” essay by Macie Parker contextualizes the folktale &ldquo;How Kimyera Became King of Uganda&rdquo; more fully in terms of social hierarchy.</p>
 						
-						<p>The materials here made availabile include:</p>
+						<p>The materials here made available include:</p>
 							<ol class="indented-list padded-list">
 								<li><em>Maori Lore: The Traditions of the Maori People, with the Most Important of Their Legends</em> (1904) (<a href="/pdf/victorian-folklore/maori-lore.pdf">PDF</a> | <a href="/pdf/victorian-folklore/maori-lore.docx">Word</a>)</li>
 
