--- a/html/ivens-craft/ic-growing_roots.html
+++ b/html/ivens-craft/ic-growing_roots.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>‘Determined to Hold Out’: Growing Roots in England | One More Voice</title><!-- Change -->
+		<title>Growing Roots in England | One More Voice</title><!-- Change -->
 		<meta name="description" content="Shows that William Ivens Craft was determined to make London his home, and how his move to cheaper lodgings marked the beginning of a period of belonging." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
 					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
-					<li id="level-4">‘Determined to Hold Out’: Growing Roots in England</li><!-- Change -->
+					<li id="level-4">Growing Roots in England</li><!-- Change -->
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -76,7 +76,7 @@
 
 				<div>
 					<span>
-						<h2 id="growing-roots">‘Determined to Hold Out’: Growing Roots in England</h2><!-- Change -->
+						<h2 id="growing-roots">Growing Roots in England</h2><!-- Change -->
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
@@ -116,9 +116,7 @@
 
 						<p>William Ivens attempted to survive unforgiving Victorian London partly by saving costs on housing. In August of 1882, one year after his return to his homeland, William Ivens moved in with the white Le Jeune family in order to save money. Felix Le Jeune was a bootmaker who lived with his wife and children at 35 Charlotte Street, Fitzroy Square.</p>
 
-						<p>A prominent citizen, Le Jeune was also a member of the England United Grand Lodge of England Freemasons (“1871 England Census”; “United Grand Lodge of England Freemason Membership Registers” 1864). Born in France around 1829, forty-year-old Felix Le Jeune married London-born, sixteen-year-old Louisa Mary Woodley on 5 April 1869 (“London, England, Church of England Marriages and Banns, 1754-1936,” 1869). When they took William Ivens on as a boarder, the Le Jeunes had four children, at least one servant, and Louisa worked making waistcoats (“1881 England Census”; Green 2018, 27; Anonymous 1878i). They may have hosted boarders such as William Ivens to earn a few extra pounds.</p>
-
-						<p>The Le Jeune family must have been relatively well off in Victorian London. A few years earlier, in 1878, Felix and Louisa had taken a servant of theirs, Annie Church, to court for stealing a gold ring worth six pounds. Louisa testified that she had spotted the ring at a nearby pawnbroker’s shop. The story circulated in the <em>The Standard</em>, apparently worthy of public attention (Anonymous 1878i).</p>
+						<p>A prominent citizen, Le Jeune was also a member of the England United Grand Lodge of England Freemasons (“1871 England Census”; “United Grand Lodge” 1864). Born in France around 1829, forty-year-old Felix Le Jeune married London-born, sixteen-year-old Louisa Mary Woodley on 5 April 1869 (“England Marriages and Banns,” 1869). When they took William Ivens on as a boarder, the Le Jeunes had four children, at least one servant, and Louisa worked making waistcoats (“1881 England Census”; Green 2018, 27; Anonymous 1878i). They may have hosted boarders such as William Ivens to earn a few extra pounds.</p>
 
 						<p>By 12 August 1882, it seems that something had changed Williams Ivens’ mind about leaving England. He wrote to Chesson that he had joined the Le Jeune household as a boarder due to “my being actuated by a desire to economize to a minimum, and I am now ensconced in cheaper lodgings.” Though struggling economically and suffering from a flare of rheumatism brought about by his yellow fever, he resolved to stay on in London. He was still employed, he wrote to Chesson, and was “determined to hold out where I am” (Craft 1882d).</p>
 					</section>
@@ -126,7 +124,7 @@
 					<section aria-labelledby="roots"><!-- Change -->
 						<h3 id="roots">Establishing Family and Roots</h3><!-- Change -->
 
-						<p>Just seven months after William Ivens moved in, Felix Le Jeune died. From his career as a bootmaker, Le Jeune left an estate totaling 38 pounds and 17 shillings to Louisa and their four children. By the time the personal estate was administered in 1884, Louisa Le Jeune, the children, and William Ivens had moved to 16 Little Titchfield street (“England & Wales, National Probate Calendar” 1884).</p>
+						<p>Just seven months after William Ivens moved in, Felix Le Jeune died. From his career as a bootmaker, Le Jeune left an estate totaling 38 pounds and 17 shillings to Louisa and their four children (the equivalent of about £6,000 today–about seven and a half thousand US dollars). By the time the personal estate was administered in 1884, Louisa Le Jeune, the children, and William Ivens had moved to 16 Little Titchfield street (“National Probate Calendar” 1884).</p>
 
 						<p>For reasons other than merely pecuniary ones, William Ivens stayed at the Le Jeune home. He soon developed a relationship with Louisa. Just over a year after Felix’s death, William Ivens and Louisa welcomed a daughter, Ellen Louisa Craft, on 17 April 1884. The family still resided at 16 Little Titchfield Street, just north of Oxford Street (Green 2018, 27). Boarding, and then starting a family, with Louisa ended the stream of letters to and from William Ivens and various benefactors. Bolstered by the small fortune left them by Felix Le Jeune, William Ivens and Louisa supported themselves and their children for a period.</p>
 
@@ -136,7 +134,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “‘Determined to Hold Out’: Growing Roots in England” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-growing_roots.html">https://onemorevoice.org/html/ivens-craft/ic-growing_roots.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. "Growing Roots in England” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-growing_roots.html">https://onemorevoice.org/html/ivens-craft/ic-growing_roots.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
