--- a/html/ivens-craft/ic-transatlantic_racism.html
+++ b/html/ivens-craft/ic-transatlantic_racism.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Between a Rock and Hard Place: Transatlantic Anti-Blackness | One More Voice</title><!-- Change -->
+		<title>Transatlantic Anti-Blackness | One More Voice</title><!-- Change -->
 		<meta name="description" content="Examines why William Ivens Craft struggled to subsist amidst the rigid class system of England, where he also faced a changing set of attitudes about race." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
 					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
-					<li id="level-4">Between a Rock and Hard Place: Transatlantic Anti-Blackness</li><!-- Change -->
+					<li id="level-4">Transatlantic Anti-Blackness</li><!-- Change -->
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -76,7 +76,7 @@
 
 				<div>
 					<span>
-						<h2 id="transatlantic-racism">Between a Rock and Hard Place: Transatlantic Anti-Blackness</h2><!-- Change -->
+						<h2 id="transatlantic-racism">Transatlantic Anti-Blackness</h2><!-- Change -->
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
@@ -117,9 +117,9 @@
 
 						<p>In December 1881, William Ivens struggled to make ends meet. He had pawned his overcoat, lived “<u>very</u> economically,” he reported, and held out hope for an increase in salary at the start of the New Year (Craft 1881i). Although he had left the United States to escape what he termed “the spirit engendered by slavery,” William Ivens found himself fettered by lines of class in England. His struggle to find adequate and “decent” clothing was one example of how poverty circumscribed his economic advancement, although he understood the importance of appearance when it came to respectability (Craft 1881c; Craft 1881a).</p>
 
-						<p>What is less clear is the extent to which racism pervaded his life in London. In some ways, William Ivens was unable to escape the reach of transatlantic anti-Blackness. He wrote to Nichol that the American blackface troupe, the Haverly Minstrels, “had quite a successful time” in London and were headed to Scotland next (Craft 1881i). Such blackface minstrelsy, appearing in England for the holiday season, helped produce a cross-class and even transatlantic white racial solidarity. Though he had traveled to England to escape American racism, the ocean could not interrupt the flow and cross currents of white supremacy.</p>
+						<p>What is less clear is the extent to which racism pervaded his life in London. In some ways, William Ivens was unable to escape the reach of transatlantic anti-Blackness. He wrote to Nichol that the American minstrel troupe, the Haverly Minstrels, “had quite a successful time” in London and were headed to Scotland next (Craft 1881i). Such minstrelsy, with its claims to accurate portrayal of Black Americans, helped produce and perpetuate racist stereotypes of Black people as well as cross-class and even transatlantic white racial solidarity. Though he had traveled to England to escape American racism, the ocean could not interrupt the flow and cross currents of white supremacy.</p>
 
-						<aside class="text-box">William Ivens’ brush with minstrelsy in the second half of nineteenth century was not an unusual experience for Londoners. Historian Jeffrey Green (2018, 51) has written about the form and function of such black-face performances for Victorian Londoners, which became wildly popular. “Minstrelsy’s success,” writes Green, “was due to it being a family show, with choral and solo singing, instrumental selections, humour, topicality, sentimentality and joy.” Nonetheless, he points out, the “legacy was almost toxic, for audiences associated African Americans with music, dance and humour.” Moreover, “[g]iven the so-limited opportunities” to Black Victorians, the “entertainment world attracted black men and women who would have met with success in other walks of life had American discrimination been less severe.”</aside>
+						<p>William Ivens’ encounter with minstrelsy in the second half of the nineteenth century was not an unusual experience for Londoners. Historian Jeffrey Green (2018, 51) has written about the form and function of such black-face performances for Victorian Londoners, which became wildly popular. “Minstrelsy’s success,” writes Green, “was due to it being a family show, with choral and solo singing, instrumental selections, humour, topicality, sentimentality and joy.” Nonetheless, he points out, the “legacy was almost toxic, for audiences associated African Americans with music, dance and humour.” Moreover, “[g]iven the so-limited opportunities” to Black Victorians, the “entertainment world attracted black men and women who would have met with success in other walks of life had American discrimination been less severe.” In fact, William Ivens’ return coincided with what scholar Laura Vorachek has termed the “apogee” blackface minstrelsy’s popularity in England. In 1882, the Prince of Wales decided to take up the banjo. He received lessons from African American musician James Bohee. This led to a “banjo craze” among the white British bourgeoisie (Vorachek 2013).</p>
 					</section>
 
 					<section aria-labelledby="generation"><!-- Change -->
@@ -129,7 +129,7 @@
 
 						<p>Instead, William Ivens was an impoverished Black Briton in an expanding empire. The color line that Great Britain pushed further and further across the globe preferred to make William Ivens’ – and his Blackness – disappear (Lake and Reynolds 2008). Because race was not marked in the census or other bureaucratic papers, William Ivens and other Black Victorian English men and women were literally erased from the nation’s memory.</p>
 
-						<p>“As I say, nothing was spoken about in this country, it was sort of hidden away a bit, really,” recalls Martin Copeland, William Ivens’ great-grandson. “Certainly, most of my family didn't even realize they had Black ancestors” (Martin Copeland interview with author, June 15, 2022). Struggling to make enough money to board, eat, and find adequate clothing, William Ivens saw privation in front of him, and racism behind him.</p>
+						<p>“As I say, nothing was spoken about in this country, it was sort of hidden away a bit, really,” recalls Martin Copeland, William Ivens’ great-grandson. “Certainly, most of my family didn't even realize they had Black ancestors” (Copeland and Copeland 2022). Struggling to make enough money to board, eat, and find adequate clothing, William Ivens saw privation in front of him, and racism behind him.</p>
 
 						<p>Yet whatever economic hardship William Ivens faced in England, it must have seemed better than the situation in America. Throughout 1882, William Ivens’ family encouraged him to stay in the “old Country.” Ellen and William “tried to pursuade [sic] him to remain a short time longer” in London, “it being so very much easier for a man of color to succeed” (Craft 1882). William Ivens’ brother also recommended that he remain in England (Craft 1882a).</p>
 					</section>
@@ -147,7 +147,7 @@
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Between a Rock and Hard Place: Transatlantic Anti-Blackness” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-transatlantic_racism.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_racism.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “Transatlantic Anti-Blackness” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-transatlantic_racism.html">https://onemorevoice.org/html/ivens-craft/ic-transatlantic_racism.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
