--- a/html/ivens-craft/ic-return_to_england.html
+++ b/html/ivens-craft/ic-return_to_england.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>'The Spirit Engendered by Slavery': William Ivens Craft Returns to England | One More Voice</title>
+		<title>William Ivens Craft Returns to England | One More Voice</title>
 		<meta name="description" content="Explores why twenty-five-year-old William Ivens Craft returned to his home country of England, where he encountered struggles with poverty and benevolence." /><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -42,7 +42,7 @@
 					<li id="level-1"><a href="/">Home</a></li>
 					<li id="level-2"><a href="/html/materials.html">Historical Materials</a></li>
 					<li id="level-3"><a href="/html/ivens-craft/ic-home.html">William Ivens Craft and the Victorian Atlantic World</a></li>
-					<li id="level-4">'The Spirit Engendered by Slavery': William Ivens Craft Returns to England</li><!-- Change -->
+					<li id="level-4">William Ivens Craft Returns to England</li><!-- Change -->
 				</ul>
 			</nav>
 			<div class="nav-container" data-include="header">
@@ -76,7 +76,7 @@
 
 				<div>
 					<span>
-						<h2 id="return-to-england">'The Spirit Engendered by Slavery': William Ivens Craft Returns to England</h2><!-- Change -->
+						<h2 id="return-to-england">William Ivens Craft Returns to England</h2><!-- Change -->
 						<ul class="publication-details">
 							<li><span>Date (publication and updates):</span> <strong>2024</strong></li>
 						</ul>
@@ -129,31 +129,31 @@
 
 						<p>Elizabeth Pease Nichol demonstrated considerably less benevolence towards William Ivens than she had for enslaved and formerly enslaved people such as William and Ellen. In the mid-nineteenth century, she had been at the fore of British abolitionism, appearing as one of only about six women depicted in the famous Benjamin Robert Haydon painting of the 1840 Anti-Slavery Society Convention (Stoddart 1899, 123-124).</p>
 
-						<aside class="text-box"><p>Before emancipation in the US, Nichol expressed her support of Black men and women in a letter to the New England Anti-Slavery Society:</p>
+						<p>Before emancipation in the US, Nichol expressed her support of Black men and women in a letter to the New England Anti-Slavery Society:</p>
 						
-						<p class="leftmargin">We would encourage you to persevere with unremitting energy in the use of all Christian efforts, until the meridian splendour of that glorious day which shall witness the last link to be broken which binds the slave – until all the odious distinctions founded on colour shall be buried in oblivion, and the injured sons of Africa in your land restored to the full enjoyments of all the rights and privileges of humanity. (Stoddart 1899, 52)</p></aside>
+						<p class="leftmargin">We would encourage you to persevere with unremitting energy in the use of all Christian efforts, until the meridian splendour of that glorious day which shall witness the last link to be broken which binds the slave – until all the odious distinctions founded on colour shall be buried in oblivion, and the injured sons of Africa in your land restored to the full enjoyments of all the rights and privileges of humanity. (Stoddart 1899, 52)</p>
 
-						<p>Nichol deemed the abolition of slavery sufficient to restore to Black Americans “the full enjoyments of all the rights and privileges of humanity,” regardless of the turbulent violence of Reconstruction. The problem of slavery “solved,” Nichol’s interests drifted elsewhere. She had been secretary of the Edinburgh chapter of the National Society of Women’s Suffrage, took on the anti-vivisection cause, and by the end of the 1870s was putting her charity towards “the erection of public abattoirs for a more humane method of killing animals for food.” In 1883, the “chief incident” in her life “was the choice of a design for another fountain, finally erected in Holyrood Park” (Stoddart 1899, 284, 288-2290, 292).</p>
+						<p>Nichol deemed the abolition of slavery sufficient to restore to Black Americans “the full enjoyments of all the rights and privileges of humanity,” regardless of the turbulent violence of Reconstruction. The problem of slavery “solved,” Nichol’s interests drifted elsewhere. She had been secretary of the Edinburgh chapter of the National Society of Women’s Suffrage, took on the anti-vivisection cause, and by the end of the 1870s was putting her charity towards “the erection of public <em>abattoirs</em> for a more humane method of killing animals for food.” In 1883, the “chief incident” in her life “was the choice of a design for another fountain, finally erected in Holyrood Park” (Stoddart 1899, 284, 288-2290, 292).</p>
 					</section>
 
 					<section aria-labelledby="limits"><!-- Change -->
 						<h3 id="limits">The Limits of White Benevolence</h3><!-- Change -->
 
-						<p>As such, Nichol and William Ivens remained divided by experiences, geographic space, race, and class. Nichol, who resided in Scotland and was firmly established among white middle class reformers, reflected the myopia of former abolitionists who felt that their aims had been achieved with the emancipation proclamation. As she wrote to a friend, “His father was my guest many years ago & I fear the poor lad maybe finding he too can walk in & stay till he finds occupation!!” (Nichol, n.d.)</p>
+						<p>As such, Nichol and William Ivens remained divided by experiences, geographic space, race, and class. Nichol, who resided in Scotland and was firmly established among white middle class reformers, reflected the myopia of former abolitionists who felt that their aims had been achieved with the emancipation proclamation. As she wrote to a friend, “His father was my guest many years ago & I fear the poor lad maybe finding <u>he</u> too can walk in & stay till he finds occupation!!” (Nichol, n.d.)</p>
 
 						<p>Despite William Ivens’ supplication and gratitude, which he poured forth liberally in letters, Nichols refused to help him further. After two loans of two pounds each, Nichol insisted she had “done all I can for him” (Nichol, n.d.). He explained that although he had since found employment, a short stint without work upon arrival in London had wound him “considerably into debt for board & lodging which I have not since been able to pay off insomuch that it has worried me greatly on my creditors persistently ‘dunning’ me for the money” (Craft 1881c).</p>
 
-						<p>Ellen Craft, too, wrote to Nichol from Georgia, thanking her for her generosity and confirming the dire situation racism caused in the American south. “My son William,” Ellen stated, “writes to tell me of your extreme kindness towards him in England, and I am sure I am at a loss to know exactly how to thank you.” She assured Nichol that although William Ivens struggled in London, things were worse across the pond. It was “so very much easier for a man of color to succeed in the race of life,” in England, “particularly if he has in any way had much to do with politics,” wrote Ellen, hinting at the fact that WIlliam Ivens was also likely involved in the Republican party while in Georgia. “[T]he Southrons [sic] being still very much envenomed towards men of that class,” Ellen concluded (Craft 1882). William Ivens’ brother also wrote to Nichol explaining the “circumstances over which [William Ivens] had no control” (Craft 1882a).</p>
+						<p>Ellen Craft, too, wrote to Nichol from Georgia, thanking her for her generosity and confirming the dire situation racism caused in the American south. “My son William,” Ellen stated, “writes to tell me of your extreme kindness towards him in England, and I am sure I am at a loss to know exactly how to thank you.” She assured Nichol that although William Ivens struggled in London, things were worse across the pond. It was “so very much easier for a man of color to succeed in the race of life,” in England, “particularly if he has in any way had much to do with politics,” wrote Ellen, hinting at the fact that William Ivens was also likely involved in the Republican party while in Georgia. “[T]he Southrons [sic] being still very much envenomed towards men of that class,” Ellen concluded (Craft 1882). William Ivens’ brother also wrote to Nichol explaining the “circumstances over which [William Ivens] had no control” (Craft 1882a).</p>
 
 						<p>Yet Nichol refused to see the obstacles that William Ivens faced and instead chalked his difficulties up to personal shortcomings. She wrote to Chesson that she was “a little afraid he,” meaning William Ivens, “does not like work.” “Between you &amp; me,” she penned Chesson, “Should it seem best to send him back to his father I wd [sic] help you in doing so” (Nichol, n.d.).</p>
 
-						<p>Nichol was not the first former white abolitionist to paint William Ivens as lazy, as Wendell Phillips had also done. Yet, in contrast to Nichol’s formulation that William Ivens was labor averse, his letters reveal a feisty determination, despite the obstacles he faced, to carve out a sense of place and belonging in London.</p>
+						<p>Nichol was not the first former white abolitionist to stereotype William Ivens as lazy, as Wendell Phillips had also done. Yet, in contrast to Nichol’s formulation that William Ivens was labor averse, his letters reveal a feisty determination, despite the obstacles he faced, to carve out a sense of place and belonging in London.</p>
 					</section>
 
 					<aside class="credits" aria-labelledby="citation">
 						<h3 id="citation">Page Citation</h3>
 
-						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “‘The Spirit Engendered by Slavery’: William Ivens Craft Returns to England” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-return_to_england.html">https://onemorevoice.org/html/ivens-craft/ic-return_to_england.html</a>.</p><!-- Change -->
+						<p><strong>Cite (MLA):</strong> McCaffrey, Hope. “William Ivens Craft Returns to England” (2024). “William Ivens Craft and the Transatlantic Victorian World,” <em>One More Voice</em>, solidarity edition, 2022-23, <a href="/html/ivens-craft/ic-return_to_england.html">https://onemorevoice.org/html/ivens-craft/ic-return_to_england.html</a>.</p><!-- Change -->
 					
 						<p><strong>Rights:</strong> <a aria-label="External Link" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a></p>
 
