--- a/html/ivens-craft/ic-return_to_england.html
+++ b/html/ivens-craft/ic-return_to_england.html
@@ -119,6 +119,8 @@
 
 						<p>William Ivens arrived back in his birthplace and hometown of London in May of 1881. By late summer, he had gained employment as a messenger for the Railways & Metropolitan Omnibus Company (Craft 1881a; 1881b; 1881c). Perhaps his experience working on the Railway Mail Service helped procure him the position of messenger, but without family in England, he at first relied on the network of benevolent patrons his parents had cultivated. This network included former white British abolitionists Elizabeth Pease Nichol, Frederick William Chesson, and Robert Nicholas Fowler, who had recently turned their reform focus to causes such as woman suffrage and the Aborigines’ Protection Society.</p>
 
+						<aside class="text-box">“People did what they had to do to exist.” - Eileen Copeland, wife of Martin Copeland, William Ivens’ great-grandson (Copeland and Copeland 2022)</aside>
+
 						<p>Forced to turn to former abolitionists to keep his head above water, he wrote to the white British journalist and activist Frederick Chesson that he was “sure I could get a promotion as clerk if I could only get a decent suit of clothes,” asking for even a “‘cast off’ from any of your friends” (Craft 1881a). He boarded at the time with a “Mr. Crosher” at 12 Blue Cross Street in Leicester Square. Working as a messenger, William Ivens made twelve shillings a week. In his own words, it did “not admit of my buying anything whatever for myself,” and it was “not enough with which to buy food” (Craft 1881b).</p>
 					</section>
 
