--- a/html/ivens-craft/ic-transatlantic_family.html
+++ b/html/ivens-craft/ic-transatlantic_family.html
@@ -128,7 +128,7 @@
 					<section aria-labelledby="hounslow"><!-- Change -->
 						<h3 id="hounslow">At Home in Hounslow</h3><!-- Change -->
 
-						<p>It was in the small house on a quiet street in Hounslow with his family that William Ivens would pass in his sleep in 1926, at the age of 70 (Green 2018, 138; Clark 2021). Without savings to afford a burial, William Ivens was laid to rest in a pauper’s grave on Sutton Lane in Hounslow (Copeland 2021).</p>
+						<p>It was in the small house on a quiet street in Hounslow with his family that William Ivens would pass in his sleep in 1926, at the age of 70 (Green 2018, 138; Clark 2021). Without savings to afford a burial, William Ivens was laid to rest in an unmarked grave on Sutton Lane in Hounslow (Copeland 2021). “William Ivens, when he died,” remembered William Ivens’ great-grandson, Martin Copeland, was buried in a “pauper's grave. My mum took me there not long before she died... she knew where it was, but there was nothing there. Sad, because they had no money. They had no money to bury him” (Copeland and Copeland 2022).</p>
 
 						<p>That money was scarce at the close of his life represents the cycles of struggle, success, and loss in the life of an educated man of Black-descent in Victorian England. “Even if they did not fulfill their dreams,” notes scholar Barbara McCaskill, “the Crafts,” including William Ivens, “kept trying” (McCaskill 2015, 89). Rather than a linear story of progress, William Ivens’ life is better characterized through its lessons of determination, hope, and the importance of family.</p>
 					</section>
