--- a/html/materials/books.html
+++ b/html/materials/books.html
@@ -829,11 +829,11 @@
 									
 										<li><em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=wu.89013485958&view=1up&seq=3">India in 1897</a></em>. Bombay; London: A.J. Combridge & Co., 1898.</li>
 
-										<li><em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015058398069&view=1up&seq=5">The Indian Problem</a></em>. Bombay: The “Eagle” Printing Press, 1894.</li>
-
 										<li><em><a aria-label="External Link" href="https://archive.org/details/cu31924104730217/page/n7/mode/2up">The Indian Eye on English Life</a></em>. Westminster: Archibald Constable and Company, 1893.</li>
 
 										<li><em><a aria-label="External Link" href="https://archive.org/details/indianmuseineng00malagoog/page/n3/mode/2up">The Indian Muse in English Garb</a></em>. Bombay: The “Reporters” Press, 1876. <a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015012914688&view=1up&seq=5">Alternate version</a>.</li>
+
+										<li><em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015058398069&view=1up&seq=5">The Indian Problem</a></em>. Bombay: The “Eagle” Printing Press, 1894.</li>
 									</ol>
 								</details>
 
@@ -857,6 +857,8 @@
 										<li><em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=mdp.39015027987695&view=1up&seq=9">Caste and Outcast</a></em>. New York: E.P. Dutton & Company, 1923. <a aria-label="External Link" href="https://github.com/amardeepmsingh/Colonial-South-Asian-Literature/blob/master/Dhan-Gopal-Mukerji-Beast-and-Man-in-India-1923.txt">Text only version</a>.</li>
 
 										<li><em><a aria-label="External Link" href="https://archive.org/details/FierceFaceTheStoryOfATiger-DhanGopalMukerji/page/n1/mode/2up">Fierce-Face: The Story of a Tiger</a></em>. New York: E.P. Dutton & Company, 1936.</li>
+
+										<li><em><a aria-label="External Link" href="https://archive.org/details/dli.ernet.13515/page/n5/mode/2up">Gay-Neck: The Story of a Pigeon</a></em>. London: J.M. Dent & Sons, Ltd., 1938. <em>Originally published 1928</em>. <a aria-label="External Link" href="https://archive.org/details/gayneck00dhan/page/n7/mode/2up">Alternate version 1</a>; <a aria-label="External Link" href="https://archive.org/details/gayneckstoryofpi00muke/page/n9/mode/2up">alternate version 2</a>.</li>
 
 										<li><em><a aria-label="External Link" href="https://babel.hathitrust.org/cgi/pt?id=uc1.b4098899&view=1up&seq=7">Hari: The Jungle Lad</a></em>. New York: E.P. Dutton & Company, 1924.</li>
 
