--- a/html/ivens-craft/ic-atlantic_life.html
+++ b/html/ivens-craft/ic-atlantic_life.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028104_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028104_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028104_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028104_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028104_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028104_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028104_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028104_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028104_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028104_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028104_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028104_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028104_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028104_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photograph of a nineteenth-century street scene lined with buildings, people, and horse carriages." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -159,9 +159,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/item/2022647331/">High Holborn Street</a>” (Photograph, 1858-1875), Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s41176. Public Domain.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph depicts High Holborn Street in the London district of Holborn in the second half of the nineteenth century, as it might have looked when William Ivens Craft and Louisa Woodley Le Jeune married there in 1888.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
