--- a/html/ivens-craft/ic-contributors_collaborators.html
+++ b/html/ivens-craft/ic-contributors_collaborators.html
@@ -158,7 +158,7 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Strand.png">Traffic on the Strand, Westminster, London</a>” (Illustration, January 2, 1890), Wikimedia Commons. Public domain.</p>
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Strand.png">Traffic on the Strand, Westminster, London</a>” (Image, January 2, 1890), Wikimedia Commons. Public domain.</p>
 
 						<p><strong>Lead image commentary:</strong> This image presents one of London’s main thoroughfares, the Strand, as it appeared in the late nineteenth century, when William Ivens Craft was working and building a life in the city. One of his primary correspondents, Frederick William Chesson, lived on the Strand, and it is likely William Ivens Craft was familiar with this bustling street. The carts, carriages, vendors, and businesses visible in this image indicate the wide range of classes and people that interacted on a daily basis in the crowded city.</p>
 					</aside>
