--- a/html/ivens-craft/ic-looking_for_louisa.html
+++ b/html/ivens-craft/ic-looking_for_louisa.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028108_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028108_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028108_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028108_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028108_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028108_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028108_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028108_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028108_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028108_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028108_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028108_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028108_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028108_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Old postcard image of a street with a large Church on one side and, a carriage, and people walking." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -139,9 +139,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://commons.wikimedia.org/wiki/File:Vanished_Methodist_Church,_Hackney._old_postcard_c_1905.jpg">Richmond Road, Hackney</a>” (Image, c. 1905), Wikimedia Commons. Creative Commons Attribution-Share Alike 2.0 Generic.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This image from a postcard shows Richmod Road in what is now the London Borough of Hackney, circa 1905. Louisa Woodley was born in Hackney around 1853. She might have, in her childhood, walked past this church on one of the main thoroughfares of the area. This church no longer stands.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
