--- a/html/ivens-craft/ic-reconstruction.html
+++ b/html/ivens-craft/ic-reconstruction.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028109_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028109_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028109_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028109_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028109_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028109_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028109_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028109_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028109_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028109_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028109_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028109_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028109_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028109_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of many African American men and women standing on a lawn in front of large stone building." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -153,9 +153,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> John W. Moulton;  John S. Moulton, “<a aria-label="External Link" href="https://www.loc.gov/item/2017657067/">Howard University</a>” (Photograph, c. 1867-1920),  Library of Congress, Prints & Photographs Division, LC-DIG-stereo-1s07887. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows a large group of African American man and women, presumably students, standing on the lawn in front of Howard University in Washington, D. C. This photo captured the school as it looked in the late nineteenth century, as it might have when Brougham Craft, William Ivens' brother, attended for a stint in the 1870s when the two were in Washington, D. C. It is possible, though we have no record of it, that William Ivens also went to school at Howard while in that city.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
