--- a/html/ivens-craft/ic-bibliography.html
+++ b/html/ivens-craft/ic-bibliography.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_ZZZZ_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_ZZZZ_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_ZZZZ_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_ZZZZ_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_ZZZZ_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_ZZZZ_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_ZZZZ_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_ZZZZ_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_ZZZZ_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_ZZZZ_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_ZZZZ_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="A stack of books with titles related to this project's bibliography." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -121,9 +121,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, "Stack of Books," (Photograph, January 22, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph depicts a stack of books that represent just a handful of the rich literature on Black Victorians in the British empire. The authors and creators of the website strived to engage with this literature as a scholarly and historiographic practice for contextualizing William Ivens Craft's life and experiences.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
