--- a/html/ivens-craft/ic-craft_legacies.html
+++ b/html/ivens-craft/ic-craft_legacies.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="698" height="524" src="/img/ivens-craft/liv_028093_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028093_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028093_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028093_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028093_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028093_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028093_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="698" height="524" src="/img/ivens-craft/liv_028093_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028093_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028093_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028093_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028093_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028093_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028093_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of Betty Trussler, born 1939, holding a framed photo of her grandfather, William A. Craft." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -178,9 +178,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Elizabeth (Betty) with Portrait of William Alfred Craft 2” (Photograph, March 18, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows Elizabeth (Betty) Ann Trussler (born in 1939 and married in 1960 to Cedric Moxey) holding a framed photo portrait of her grandfather, William Alfred Craft, who was the son of William Ivens Craft. Betty recalls how details of the family's Black ancestry were purposefully forgotten.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
