--- a/html/ivens-craft/ic-family_loss.html
+++ b/html/ivens-craft/ic-family_loss.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028061_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028061_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028061_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028061_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028061_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028061_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028061_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of six men standing in front of a wooden building flanked by two horse carts with men in them." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -144,9 +144,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “William Ivens Craft in Coal Yard” (Photograph, 1855-1926), Martin Copeland's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph shows William Ivens Craft standing in a coal yard in England with his fellow workers. He is on the viewer's left, leaning against the cart. In the 1911 England Census, William Ivens listed his occupation as “coal agent,” and was still listed as such on his daughter's marriage record the following year. This image was likely captured around then.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
