--- a/html/ivens-craft/ic-losing_finding.html
+++ b/html/ivens-craft/ic-losing_finding.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028102_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028102_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028102_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028102_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028102_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028102_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028102_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028102_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028102_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028102_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028102_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028102_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028102_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028102_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Old photo depicts four or more men standing in a single line sorting mail inside a train car." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -159,9 +159,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Anonymous, “<a aria-label="External Link" href="https://www.loc.gov/resource/cph.3c08043/">Men Working in Railway Mail Train</a>” (Photograph, c. 1909-1932), Library of Congress, Prints & Photographs Division, LC-USZ62-108043. No known restrictions on the photographs in the National Photo Company Collection.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph, taken in the early twentieth century, depicts the interior of a railway train car and the conditions in which mail agents worked. In the 1870s, William Ivens Craft and his brother labored under similar conditions as agents in the American South on the Post Office Rail Services.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
