--- a/html/ivens-craft/ic-parents_escape.html
+++ b/html/ivens-craft/ic-parents_escape.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028027_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028027_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028027_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028027_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028027_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028027_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028027_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028027_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028027_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028027_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028027_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028027_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028027_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028027_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Newspaper sketch of a market scene with men and women with carts going about their business." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -149,9 +149,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Harper's Weekly, “<a aria-label="External Link" href="https://www.loc.gov/resource/cph.3b03062/">Market Scene in Macon, Georgia</a>” (Image, July 13, 1867) Library of Congress, Prints & Photographs Division, LC-USZ62-55173. No known restrictions on publication.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This sketch illustration from <em>Harper's Weekly</em> paper depicts a market scene in Macon, Georgia, as it might have looked in the mid-nineteenth century when William Ivens Craft's parents, Ellen and William, were enslaved there. In 1848, William and Ellen decided to leave southern scenes such as this one and make their bid for freedom, so that their children might know freedom instead of slavery.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
