--- a/html/ivens-craft/ic-return_to_england.html
+++ b/html/ivens-craft/ic-return_to_england.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028043_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028043_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028043_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028043_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028043_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028043_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028043_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028043_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028043_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028043_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028043_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028043_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028043_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028043_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo, with a ruler for scale, of an 1884 receipt for two pounds, signed by William Ivens Craft." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -165,9 +165,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> William Ivens Craft, “Receipt for Two Pounds Signed by William Ivens Craft” (Image, September 6, 1881), The Bodleian Libraries, University of Oxford,MSS. Brit. Emp. s. 18-C129, fol. 135r.  </p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This slip of paper is a receipt drawn up by William Ivens Craft for two pounds that he borrowed from one of his reluctant British benefactors, F. W. Chesson in September of 1881. Despite the myriad challenges that William Ivens faced upon his return to his home country of England, he found the abolitionists who had been eager to help his parents reticent to lend him similar pecuniary aid--and these two pounds represent the most they could lend him, or so they insisted. </p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
