--- a/html/ivens-craft/ic-transatlantic_family.html
+++ b/html/ivens-craft/ic-transatlantic_family.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028090_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028090_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028090_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028090_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028090_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028090_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028090_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028090_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028090_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028090_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028090_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028090_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028090_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028090_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Photo of a street with a row of attached houses lining one side of it." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -146,9 +146,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> Hope McCaffrey, “Street View of Vicarage Farm Road 2” (Photograph, March 18, 2023), Hope McCaffrey's Private Collection. Creative Commons Attribution 4.0 International.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph gives us a streetview of the last house that William Ivens Craft lived in with his family, on Vicarage Farm Road in Hounslow. The homes featured a cozy brick facade with red window trim and were called "Kiatta Villages." Although this was only one of many houses that William Ivens lived in throughout his life, that he lived here with his children and grandchildren made it home.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
