--- a/html/ivens-craft/ic-transatlantic_racism.html
+++ b/html/ivens-craft/ic-transatlantic_racism.html
@@ -65,7 +65,7 @@
 			<section class="page-details horizontal">
 				<figure class="image-wrapper">
 					<!-- img sizes calculated using https://ausi.github.io/respimagelint/ -->
-					<img width="700" height="500" src="/img/ivens-craft/liv_028041_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028041_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028041_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028041_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028041_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028041_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028041_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="" /><!-- Change -->
+					<img width="700" height="500" src="/img/ivens-craft/liv_028041_0001_deriv-1396px.jpg" srcset="/img/ivens-craft/liv_028041_0001_deriv-318px.jpg 318w, /img/ivens-craft/liv_028041_0001_deriv-478px.jpg 478w, /img/ivens-craft/liv_028041_0001_deriv-636px.jpg 636w, /img/ivens-craft/liv_028041_0001_deriv-698px.jpg 698w, /img/ivens-craft/liv_028041_0001_deriv-956px.jpg 956w, /img/ivens-craft/liv_028041_0001_deriv-1396px.jpg 1396w" sizes="(min-width: 1600px) 878px, (min-width: 992px) calc(50.44vw + 31px), (min-width: 768px) 698px, 100vw" alt="Black and white photo of men atop a stage coach omnibus, with horses and a driver standing in back." /><!-- Change -->
 					<figcaption class="caption-icon mobile">
 						<span class="tooltip-container">
 							<a class="caption" href="#credits" aria-label="Go to image details" aria-describedby="caption-icon-1" data-tooltip-trigger><i class="fa fa-info-circle" aria-hidden="true"></i></a>
@@ -159,9 +159,9 @@
 					<aside id="credits" class="credits" aria-labelledby="image-details">
 						<h3 id="image-details">Lead Image Details</h3>
 
-						<p id="caption"><strong>Lead image caption:</strong> .</p><!-- Change -->
+						<p id="caption"><strong>Lead image caption:</strong> London Stereoscopic Company, “<a aria-label="External Link" href="https://en.m.wikipedia.org/wiki/File:London_omnibus_in_1865.jpg">London Omnibus 1865</a>” (Photograph, 1865), Wikimedia Commons. Public Domain.</p><!-- Change -->
 
-						<p><strong>Lead image commentary:</strong> .</p><!-- Change -->
+						<p><strong>Lead image commentary:</strong> This photograph of a packed omnibus likely resermbles the kind that William Ivens encountered during his first years back in his home country, when he worked as a messenger for the Railways & Metropolitan Omnibus Company.</p><!-- Change -->
 					</aside>
 				</article>
 				<div class="decoration"></div>
